# homelab

./: .editorconfig  .gitignore  pyproject.toml
certs/int-ca/: ca.conf  gen-int-ca.sh
certs/root-ca/: ca.conf  gen-root-ca.sh
certs/vault/ca/: ca.conf  gen-ca.sh
certs/vault/raft-cert/: cert.conf  gen-cert.sh
certs/vault/server-cert/: cert.conf  gen-cert.sh
dns/bind9-alpine-playbook/: playbook.yml
dns/deploy/bind9-alpine-playbook/: README.md  playbook.yml
dns/deploy/terraform/: .terraform.lock.hcl  main.tf  providers.tf
dns/domain-provisioning/: .terraform.lock.hcl  config.tf  domains.tf  providers.tf  variables.tf
dns/terraform/: main.tf  providers.tf
kubernetes/services/: README.md  helmfile.yaml
kubernetes/services/authentik/: issuer.tf  postgres.tf  vault.tf
kubernetes/services/cert-manager/: locals.tf  namespace.tf  operator.tf  variables.tf  vault.tf
kubernetes/terraform/: .terraform.lock.hcl  cloud-config.tftpl  main.tf  providers.tf  variables.tf
packer/ubuntu-server-jammy-proxmox-experiment/: ubuntu-server-jammy.pkr.hcl
playbooks/install-root-ca/: playbook.yml
playgrounds/alpine-cloud-init/: cloud-config.tftpl  main.tf  providers.tf  variables.tf
playgrounds/lvm-cloud-init/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
vault/deploy/playbook/: ansible.cfg  (+1 more)
vault/playbook/: playbook.yml
vault/resources/: .terraform.lock.hcl  bind9.tf  kubernetes-dashboard.tf  kubernetes.tf  pki.tf  providers.tf  proxmox.tf  tsig.tf  vault-secrets-operator.tf
vault/terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
(+148 files in other folders)
