[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Kirill Aleksandrov <aleksandrov.k.v@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "9.5.1"
docker = "7.0.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "24.2.3", markers = 'platform_system != "Windows"' }

